RESOLVED FIXED215578
AudioNode.disconnect() does not match the specification
https://bugs.webkit.org/show_bug.cgi?id=215578
Summary AudioNode.disconnect() does not match the specification
Chris Dumez
Reported 2020-08-17 11:32:52 PDT
AudioNode.disconnect() does not match the specification. There are a lot of overloads in the specification that we do not support.
Attachments
Patch (21.21 KB, patch)
2020-08-17 13:04 PDT, Chris Dumez
eric.carlson: review+
Chris Dumez
Comment 1 2020-08-17 13:04:41 PDT
Eric Carlson
Comment 2 2020-08-17 13:12:54 PDT
Comment on attachment 406739 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=406739&action=review > Source/WebCore/ChangeLog:9 > + AudioNode.disconnect() did not match the specification. There were a lot of overloads in > + the specification that we do not support: There is a minor tense problem here, should either be "There were ... that we did not..." or "There are ... that we do not ..."
Chris Dumez
Comment 3 2020-08-17 16:13:17 PDT
Radar WebKit Bug Importer
Comment 4 2020-08-17 16:14:34 PDT
Note You need to log in before you can comment on or make changes to this bug.