AudioNode.disconnect() does not match the specification https://bugs.webkit.org/show_bug.cgi?id=215578

Reviewed by Eric Carlson.

LayoutTests/imported/w3c:

Rebaseline WPT test now that more checks are passing.

* web-platform-tests/webaudio/the-audio-api/the-audionode-interface/audionode-disconnect-audioparam-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audionode-interface/audionode-disconnect-expected.txt:

Source/WebCore:

AudioNode.disconnect() did not match the specification. There were a lot of overloads in
the specification that we did not support:
- https://www.w3.org/TR/webaudio/#dom-audionode-disconnect

No new tests, rebaselined existing tests.

* Modules/webaudio/AudioBasicInspectorNode.cpp:
(WebCore::AudioBasicInspectorNode::connect): Deleted.
(WebCore::AudioBasicInspectorNode::disconnect): Deleted.
* Modules/webaudio/AudioBasicInspectorNode.h:
* Modules/webaudio/AudioNode.cpp:
(WebCore::AudioNode::connect):
(WebCore::AudioNode::disconnect):
* Modules/webaudio/AudioNode.h:
(WebCore::AudioNode::updatePullStatus):
* Modules/webaudio/AudioNode.idl:
* Modules/webaudio/AudioNodeOutput.h:
(WebCore::AudioNodeOutput::isConnectedTo const):

Canonical link: https://commits.webkit.org/228346@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265781 268f45cc-cd09-0410-ab3c-d52691b4dbfc