Source/WebCore/Modules/webaudio/AudioBasicInspectorNode.h
@@ -38,11 +38,9 @@ public:
 
 private:
     void pullInputs(size_t framesToProcess) override;
-    ExceptionOr<void> connect(AudioNode&, unsigned outputIndex, unsigned inputIndex) override;
-    ExceptionOr<void> disconnect(unsigned outputIndex) override;
     void checkNumberOfChannelsForInput(AudioNodeInput*) override;
 
-    void updatePullStatus();
+    void updatePullStatus() final;
 
     bool m_needAutomaticPull { false }; // When setting to true, AudioBasicInspectorNode will be pulled automatically by AudioContext before the end of each render quantum.
 };
