Source/WebCore/Modules/webaudio/AudioNodeOutput.h
@@ -75,6 +75,9 @@ public:
 
     bool isConnected() { return fanOutCount() > 0 || paramFanOutCount() > 0; }
 
+    bool isConnectedTo(AudioNodeInput& input) const { return m_inputs.contains(&input); }
+    bool isConnectedTo(AudioParam& param) const { return m_params.contains(&param); }
+
     // Disable/Enable happens when there are still JavaScript references to a node, but it has otherwise "finished" its work.
     // For example, when a note has finished playing.  It is kept around, because it may be played again at a later time.
     // They must be called with the context's graph lock.
